--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
         <header class="header">
             <img class="header__logo" src="./images/Logo-header.png" alt="Логотип">
         </header>
-        <div class="profile">
-                <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватар">
-            <div class="user-info__data">
-                    <h1 class="user-info__name">Jaques Causteau</h1>
-                    <p class="user-info__job">Sailor, Researcher</p>
 
-                <button class="button user-info__button">+</button>
-                <button class="button user-info__edit-button">Edit</button>
+    <section class="section">
+        <div class="profile">
+            <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватар">
+            <div class="profile__info">
+                    <h1 class="profile__name">Жак-Ив Кусто</h1>
+                    <button class="button profile__button"></button>
+                    <p class="profile__job">Исследователь океана</p>
             </div>
+            <button class="button profile__edit-button">+</button>
         </div>
+    </section>
 
     </div>
     
