--- a/index.html
+++ b/index.html
@@ -24,6 +24,27 @@
         </div>
     </section>
 
+    <section class="places-list">
+        <div class="card-item">
+        <img src="./images/kirill-pershin-1088404-unsplash.jpg" class="card-image" alt="фото">
+        </div>
+        <div class="card-item">
+        <img src="./images/kirill-pershin-1088404-unsplash.jpg" class="card-image" alt="фото">
+        </div>
+        <div class="card-item">
+        <img src="./images/kirill-pershin-1088404-unsplash.jpg" class="card-image" alt="фото">
+        </div>        
+        <div class="card-item">
+        <img src="./images/kirill-pershin-1088404-unsplash.jpg" class="card-image" alt="фото">
+        </div>       
+        <div class="card-item">
+        <img src="./images/kirill-pershin-1088404-unsplash.jpg" class="card-image" alt="фото">
+        </div>
+        <div class="card-item">
+        </div>
+
+    </section>
+
     </div>
     
 </body>
