--- a/index.html
+++ b/index.html
@@ -17,33 +17,74 @@
             <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватар">
             <div class="profile__info">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
-                    <button class="button profile__button"></button>
+                    <button type="button" class="button profile__button"></button>
                     <p class="profile__job">Исследователь океана</p>
             </div>
-            <button class="button profile__edit-button">+</button>
+            <button type="button" class="button profile__edit-button">+</button>
         </div>
     </section>
 
-    <section class="places-list">
-        <div class="card-item">
-        <img src="./images/kirill-pershin-1088404-unsplash.jpg" class="card-image" alt="фото">
+    <section class="places-list section">
+        <div class="place-card">
+        <img src="./images/kirill-pershin-1088404-unsplash.jpg" class="place-card__image" alt="фото">
+        <div class="place-card__description">
+        <h2 class="place-card__title">Карачаевск</h2>
+        <img class="place-card__like-img" alt="лайк" src="./images/like.svg">
         </div>
-        <div class="card-item">
-        <img src="./images/kirill-pershin-1088404-unsplash.jpg" class="card-image" alt="фото">
+    </div>
+        <div class="place-card">
+        <img src="./images/Эльбрус.png" class="place-card__image" alt="фото">
+        <div class="place-card__description">
+        <h2 class="place-card__title">Гора Эльбрус</h2>
+        <img class="place-card__like-img" alt="лайк" src="./images/like.svg">
         </div>
-        <div class="card-item">
-        <img src="./images/kirill-pershin-1088404-unsplash.jpg" class="card-image" alt="фото">
-        </div>        
-        <div class="card-item">
-        <img src="./images/kirill-pershin-1088404-unsplash.jpg" class="card-image" alt="фото">
-        </div>       
-        <div class="card-item">
-        <img src="./images/kirill-pershin-1088404-unsplash.jpg" class="card-image" alt="фото">
+    </div>
+        <div class="place-card">
+        <img src="./images/Домбай-1.png" class="place-card__image" alt="фото">
+        <div class="place-card__description">
+        <h2 class="place-card__title">Домбай</h2>        
+        <img class="place-card__like-img" alt="лайк" src="./images/like.svg">
         </div>
-        <div class="card-item">
+    </div>
+        <div class="place-card">
+        <img src="./images/Эльбрус.png" class="place-card__image" alt="фото">
+        <div class="place-card__description">
+        <h2 class="place-card__title">Гора Эльбрус</h2>
+        <img class="place-card__like-img" alt="лайк" src="./images/like.svg"> 
+        </div>      
+        
+    </div>
+        <div class="place-card">
+        <img src="./images/Домбай-1.png" class="place-card__image" alt="фото">
+        <div class="place-card__description">
+        <h2 class="place-card__title">Домбай</h2>
+        <img class="place-card__like-img" alt="лайк" src="./images/like.svg">
         </div>
-
+    </div>
+        <div class="place-card">
+            <img src="./images/kirill-pershin-1088404-unsplash.jpg" class="place-card__image" alt="фото">
+            <div class="place-card__description">
+        <h2 class="place-card__title">Карачаево-Черкессия</h2>
+        <img class="place-card__like-img" alt="лайк" src="./images/like.svg">
+        </div>
+    </div>
     </section>
+
+    <div class="popup popup_edit">
+        <div class="popup__content">
+          <img src="./images/Close Icon.png" alt="Крестик закрывающий редактор профиля" class="popup__close">
+          <h2 class="popup__title">Редактировать профиль</h2>
+          <form class="popup__form" name="Добавить">
+              <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя">
+              <input type="text" name="description" class="popup__input popup__input_type_link-url" placeholder="О себе">
+              <button class="button popup__button">Сохранить</button>
+          </form>
+        </div>
+      </div>
+
+    <footer class="footer">
+        <p class="footer__author">© 2021. Бестаев Руслан</p>
+    </footer>
 
     </div>
     
