доделать попап, описать работу попап

--- a/index.html
+++ b/index.html
@@ -28,29 +28,29 @@
         <div class="place-card">
         <img src="./images/kirill-pershin-1088404-unsplash.jpg" class="place-card__image" alt="фото">
         <div class="place-card__description">
-        <h2 class="place-card__title">Карачаевск</h2>
-        <img class="place-card__like-img" alt="лайк" src="./images/like.svg">
+        <h2 class="place-card__title">Карачаево-Черкессия</h2>
+        <img class="place-card__like-img place-card__like-img_active" alt="лайк" type="button" src="./images/like.svg">
         </div>
     </div>
         <div class="place-card">
         <img src="./images/Эльбрус.png" class="place-card__image" alt="фото">
         <div class="place-card__description">
         <h2 class="place-card__title">Гора Эльбрус</h2>
-        <img class="place-card__like-img" alt="лайк" src="./images/like.svg">
+        <img class="place-card__like-img place-card__like-img_active" alt="лайк" type="button" src="./images/like.svg">
         </div>
     </div>
         <div class="place-card">
         <img src="./images/Домбай-1.png" class="place-card__image" alt="фото">
         <div class="place-card__description">
         <h2 class="place-card__title">Домбай</h2>        
-        <img class="place-card__like-img" alt="лайк" src="./images/like.svg">
+        <img class="place-card__like-img place-card__like-img_active" alt="лайк" type="button" src="./images/like.svg">
         </div>
     </div>
         <div class="place-card">
         <img src="./images/Эльбрус.png" class="place-card__image" alt="фото">
         <div class="place-card__description">
         <h2 class="place-card__title">Гора Эльбрус</h2>
-        <img class="place-card__like-img" alt="лайк" src="./images/like.svg"> 
+        <img class="place-card__like-img place-card__like-img_active" alt="лайк" type="button" src="./images/like.svg"> 
         </div>      
         
     </div>
@@ -58,25 +58,25 @@
         <img src="./images/Домбай-1.png" class="place-card__image" alt="фото">
         <div class="place-card__description">
         <h2 class="place-card__title">Домбай</h2>
-        <img class="place-card__like-img" alt="лайк" src="./images/like.svg">
+        <img class="place-card__like-img place-card__like-img_active" alt="лайк" type="button" src="./images/like.svg">
         </div>
     </div>
         <div class="place-card">
             <img src="./images/kirill-pershin-1088404-unsplash.jpg" class="place-card__image" alt="фото">
             <div class="place-card__description">
         <h2 class="place-card__title">Карачаево-Черкессия</h2>
-        <img class="place-card__like-img" alt="лайк" src="./images/like.svg">
+        <img class="place-card__like-img place-card__like-img_active" alt="лайк" type="button" src="./images/like.svg">
         </div>
     </div>
     </section>
 
-    <div class="popup popup_edit">
+    <div class="popup popup_open">
         <div class="popup__content">
           <img src="./images/Close Icon.png" alt="Крестик закрывающий редактор профиля" class="popup__close">
           <h2 class="popup__title">Редактировать профиль</h2>
           <form class="popup__form" name="Добавить">
-              <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя">
-              <input type="text" name="description" class="popup__input popup__input_type_link-url" placeholder="О себе">
+              <input type="text" name="name" class="popup__input popup__input_type_name"  maxlength="12" placeholder="Имя">
+              <input type="text" name="description" class="popup__input popup__input_type_job" maxlength="12" placeholder="О себе">
               <button class="button popup__button">Сохранить</button>
           </form>
         </div>
@@ -87,6 +87,6 @@
     </footer>
 
     </div>
-    
+    <script src="script.js"></script>
 </body>
 </html>
