--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
             <img class="header__logo" src="./images/Logo-header.png" alt="Логотип">
         </header>
 
-        <section class="section">
+        <main class="content">
+        <section class="section section__profile">
+            <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватар">
             <div class="profile">
-                <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватар">
+                
                 <div class="profile__info">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
                     <button type="button" class="button profile__button"></button>
                     <p class="profile__job">Исследователь океана</p>
+                    
                 </div>
                 <button type="button" class="button profile__edit-button">+</button>
             </div>
@@ -91,6 +94,7 @@
                 </form>
             </div>
         </div>
+        </main>
 
         <footer class="footer">
             <p class="footer__author">© 2021. Бестаев Руслан</p>
