--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
         </header>
 
         <main class="content">
-        <section class="section section__profile">
+        <section class="section profile">
             <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватар">
-            <div class="profile">
-                
-                <div class="profile__info">
+            <div class="profile__section">
+                <div class="profile__date">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
                     <button type="button" class="button profile__button"></button>
                     <p class="profile__job">Исследователь океана</p>
-                    
                 </div>
                 <button type="button" class="button profile__edit-button">+</button>
             </div>
