--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="page">
         <header class="header">
-            <img class="header__logo" src="./images/Logo-header.png" alt="Логотип">
+            <img class="header__logo" src="./images/header-logo.svg" alt="Логотип">
         </header>
 
         <main class="content">
@@ -78,28 +78,28 @@
                 </div>
             </div>
         </section>
-
-        <div class="popup popup_open">
-            <div class="popup__content">
-                <img src="./images/Close Icon.png" alt="Крестик закрывающий редактор профиля" class="popup__close">
-                <h2 class="popup__title">Редактировать профиль</h2>
-                <form class="popup__form" name="Добавить">
-                    <input type="text" name="name" class="popup__input popup__input_type_name" maxlength="12"
-                        placeholder="Имя">
-                    <input type="text" name="description" class="popup__input popup__input_type_job" maxlength="12"
-                        placeholder="О себе">
-                    <button class="button popup__button">Сохранить</button>
-                </form>
-            </div>
-        </div>
         </main>
 
         <footer class="footer">
             <p class="footer__author">© 2021. Бестаев Руслан</p>
         </footer>
 
+        <div class="popup popup_open">
+            <div class="popup__content">
+                <img src="./images/Close Icon.png" alt="Крестик закрывающий редактор профиля" class="popup__close">
+                <h2 class="popup__title">Редактировать профиль</h2>
+                <form class="popup__form" name="add-form">
+                    <input type="text" name="name" class="popup__input popup__input_type_name"
+placeholder="Имя">
+                    <input type="text" name="description" class="popup__input popup__input_type_job"
+placeholder="О себе">
+                    <button class="button popup__button" type="button" >Сохранить</button>
+                </form>
+            </div>
+        </div>
+
     </div>
-    <script src="script.js"></script>
+    <script src="./scripts/index.js"></script>
 </body>
 
 </html>
