Изменить лайки, крестик

--- a/index.html
+++ b/index.html
@@ -32,32 +32,28 @@
                 <img src="./images/kirill-pershin-1088404-unsplash.jpg" class="place-card__image" alt="фото">
                 <div class="place-card__description">
                     <h2 class="place-card__title">Карачаево-Черкессия</h2>
-                    <img class="place-card__like-img place-card__like-img_active" alt="лайк" type="button"
-                        src="./images/like.svg">
+                    <button class="place-card__like-img place-card__like-img_active" type="button"></button>
                 </div>
             </div>
             <div class="place-card">
                 <img src="./images/Эльбрус.png" class="place-card__image" alt="фото">
                 <div class="place-card__description">
                     <h2 class="place-card__title">Гора Эльбрус</h2>
-                    <img class="place-card__like-img place-card__like-img_active" alt="лайк" type="button"
-                        src="./images/like.svg">
+                    <button class="place-card__like-img" type="button"></button>
                 </div>
             </div>
             <div class="place-card">
                 <img src="./images/Домбай-1.png" class="place-card__image" alt="фото">
                 <div class="place-card__description">
                     <h2 class="place-card__title">Домбай</h2>
-                    <img class="place-card__like-img place-card__like-img_active" alt="лайк" type="button"
-                        src="./images/like.svg">
+                    <button class="place-card__like-img" type="button"></button>
                 </div>
             </div>
             <div class="place-card">
                 <img src="./images/Эльбрус.png" class="place-card__image" alt="фото">
                 <div class="place-card__description">
                     <h2 class="place-card__title">Гора Эльбрус</h2>
-                    <img class="place-card__like-img place-card__like-img_active" alt="лайк" type="button"
-                        src="./images/like.svg">
+                    <button class="place-card__like-img" type="button"></button>
                 </div>
 
             </div>
@@ -65,16 +61,14 @@
                 <img src="./images/Домбай-1.png" class="place-card__image" alt="фото">
                 <div class="place-card__description">
                     <h2 class="place-card__title">Домбай</h2>
-                    <img class="place-card__like-img place-card__like-img_active" alt="лайк" type="button"
-                        src="./images/like.svg">
+                    <button class="place-card__like-img" type="button"></button>
                 </div>
             </div>
             <div class="place-card">
                 <img src="./images/kirill-pershin-1088404-unsplash.jpg" class="place-card__image" alt="фото">
                 <div class="place-card__description">
                     <h2 class="place-card__title">Карачаево-Черкессия</h2>
-                    <img class="place-card__like-img place-card__like-img_active" alt="лайк" type="button"
-                        src="./images/like.svg">
+                    <button class="place-card__like-img" type="button"></button>
                 </div>
             </div>
         </section>
@@ -86,7 +80,7 @@
 
         <div class="popup popup_open">
             <div class="popup__content">
-                <img src="./images/Close Icon.png" alt="Крестик закрывающий редактор профиля" class="popup__close">
+                <button class="popup__close" type="button"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <form class="popup__form" name="add-form">
                     <input type="text" name="name" class="popup__input popup__input_type_name"
