--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <button type="button" class="button profile__button"></button>
                     <p class="profile__job">Исследователь океана</p>
                 </div>
-                <button type="button" class="button profile__edit-button">+</button>
+                <button type="button" class="button profile__edit-button"></button>
             </div>
         </section>
 
@@ -78,7 +78,7 @@
             <p class="footer__author">© 2021. Бестаев Руслан</p>
         </footer>
 
-        <div class="popup popup_open">
+        <div class="popup">
             <div class="popup__content">
                 <button class="popup__close" type="button"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
@@ -87,7 +87,7 @@
 placeholder="Имя">
                     <input type="text" name="description" class="popup__input popup__input_type_job"
 placeholder="О себе">
-                    <button class="button popup__button" type="button" >Сохранить</button>
+                    <button class="button popup__button" type="submit">Сохранить</button>
                 </form>
             </div>
         </div>
