--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="popup__content">
                     <button class="popup__close" type="button"></button>
                     <h2 class="popup__title">Новое место</h2>
-                    <form class="popup__form popup_type__edite-card_form" name="add-form">
+                    <form class="popup__form popup_type_edite-card_form" name="add-form">
                         <input type="text" name="name" class="popup__input popup__input_type_name popup__input_type_edite-card-name" placeholder="Название">
                         <input type="text" name="description" class="popup__input popup__input_type_job popup__input_type_edite-card-link"
                             placeholder="Ссылка на картинку">
@@ -75,7 +75,7 @@
             <div class="popup__container">
                 <button class="popup__close" type="button"></button>
                 <img class="popup__image" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/baikal.jpg" alt="фото">
-                <h2 class="popup__image_title"></h2>
+                <h2 class="popup__image-title"></h2>
 
             </div>
         </div>
