--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
                 <div class="popup__content">
                     <button class="popup__close" type="button"></button>
                     <h2 class="popup__title">Редактировать профиль</h2>
-                    <form name = 'edit-profile-form' class="popup__form" name="add-form" >
-                        <input type="text" name="name" minlength="2" maxlength="40" class="popup__input popup__input_type_name" placeholder="Имя" required>
+                    <form name = 'profileForm' class="popup__form" name="add-form" novalidate>
+                        <input type="text"  id = "popup__input" name="name" minlength="2" maxlength="40" class="popup__input popup__input_type_name" placeholder="Имя" required>
+                        <span class="popup__input-error"></span>
                         <input type="text" name="description" minlength="2" maxlength="200" class="popup__input popup__input_type_job" placeholder="О себе" required>
+                        <span class="popup__input-error"></span>
                         <button class="button popup__button" type="submit">Сохранить</button>
                     </form>
                 </div>
@@ -60,7 +62,7 @@
                 <div class="popup__content">
                     <button class="popup__close" type="button"></button>
                     <h2 class="popup__title">Новое место</h2>
-                    <form name = 'edite-card-form' class="popup__form popup__form_add-form" name="add-form">
+                    <form name = 'cardForm' class="popup__form popup__form_add-form" name="add-form" novalidate>
                         <input type="text" name="name" class="popup__input popup__input_type_name popup__input_type_edite-card-name" placeholder="Название" required>
                         <input type="url" name="url" class="popup__input popup__input_type_job popup__input_type_edite-card-link"
                             placeholder="Ссылка на картинку" required>
@@ -91,6 +93,8 @@
 
     </div>
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validate.js"></script>
+
 </body>
 
 </html>
