--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                     <button class="popup__close" type="button"></button>
                     <h2 class="popup__title">Редактировать профиль</h2>
                     <form name = 'profileForm' class="popup__form" name="add-form" novalidate>
-                        <input type="text"  id = "popup__input" name="name" minlength="2" maxlength="40" class="popup__input popup__input_type_name" placeholder="Имя" required>
-                        <span class="popup__input-error"></span>
-                        <input type="text" name="description" minlength="2" maxlength="200" class="popup__input popup__input_type_job" placeholder="О себе" required>
-                        <span class="popup__input-error"></span>
+                        <input type="text"  id = "name__input" name="name" minlength="2" maxlength="40" class="popup__input popup__input_type_name" placeholder="Имя" required>
+                        <span class="popup__input-error" id="name__input-error"></span>
+                        <input type="text" name="description" id="job-input" minlength="2" maxlength="200" class="popup__input popup__input_type_job" placeholder="О себе" required>
+                        <span class="popup__input-error" id="job-input-error"></span>
                         <button class="button popup__button" type="submit">Сохранить</button>
                     </form>
                 </div>
@@ -63,9 +63,11 @@
                     <button class="popup__close" type="button"></button>
                     <h2 class="popup__title">Новое место</h2>
                     <form name = 'cardForm' class="popup__form popup__form_add-form" name="add-form" novalidate>
-                        <input type="text" name="name" class="popup__input popup__input_type_name popup__input_type_edite-card-name" placeholder="Название" required>
-                        <input type="url" name="url" class="popup__input popup__input_type_job popup__input_type_edite-card-link"
+                        <input type="text" name="name" id="nameCard" class="popup__input popup__input_type_name popup__input_type_edite-card-name" minlength="2" maxlength="30" placeholder="Название" required>
+                        <span class="popup__input-error" id="nameCard-error"></span>
+                        <input type="url" name="url" id="url" class="popup__input popup__input_type_job popup__input_type_edite-card-link"
                             placeholder="Ссылка на картинку" required>
+                            <span class="popup__input-error" id="url-error"></span>
                         <button class="button popup__button" type="submit">Создать</button>
                     </form>
                 </div>
@@ -93,7 +95,7 @@
 
     </div>
     <script src="./scripts/index.js"></script>
-    <script src="./scripts/validate.js"></script>
+    <script src="./scripts/dsddsd.js"></script>
 
 </body>
 
