--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     </div>
     <script src="./scripts/index.js"></script>
-    <script src="./scripts/dsddsd.js"></script>
+    <script src="./scripts/validate.js"></script>
 
 </body>
 
