--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="popup__content">
                     <button class="popup__close" type="button"></button>
                     <h2 class="popup__title">Редактировать профиль</h2>
-                    <form name = 'profileForm' class="popup__form" name="add-form" novalidate>
+                    <form name = 'profileForm' class="popup__form"  novalidate>
                         <input type="text"  id = "name__input" name="name" minlength="2" maxlength="40" class="popup__input popup__input_type_name" placeholder="Имя" required>
                         <span class="popup__input-error" id="name__input-error"></span>
                         <input type="text" name="description" id="job-input" minlength="2" maxlength="200" class="popup__input popup__input_type_job" placeholder="О себе" required>
@@ -62,7 +62,7 @@
                 <div class="popup__content">
                     <button class="popup__close" type="button"></button>
                     <h2 class="popup__title">Новое место</h2>
-                    <form name = 'cardForm' class="popup__form popup__form_add-form" name="add-form" novalidate>
+                    <form name = 'cardForm' class="popup__form popup__form_add-form"  novalidate>
                         <input type="text" name="name" id="nameCard" class="popup__input popup__input_type_name popup__input_type_edite-card-name" minlength="2" maxlength="30" placeholder="Название" required>
                         <span class="popup__input-error" id="nameCard-error"></span>
                         <input type="url" name="url" id="url" class="popup__input popup__input_type_job popup__input_type_edite-card-link"
