--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <button class="popup__close" type="button"></button>
                     <h2 class="popup__title">Новое место</h2>
                     <form name = 'cardForm' class="popup__form popup__form_add-form"  novalidate>
-                        <input type="text" name="name" id="nameCard" class="popup__input popup__input_type_name popup__input_type_edite-card-name" minlength="2" maxlength="30" placeholder="Название" required>
+                        <input type="text" name="nameCard" id="nameCard" class="popup__input popup__input_type_name popup__input_type_edite-card-name" minlength="2" maxlength="30" placeholder="Название" required>
                         <span class="popup__input-error" id="nameCard-error"></span>
                         <input type="url" name="url" id="url" class="popup__input popup__input_type_job popup__input_type_edite-card-link"
                             placeholder="Ссылка на картинку" required>
