--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     <script  type = 'module' src="./scripts/index.js"></script>
     <script  type = 'module' src="./scripts/Card.js"></script>
     <script  type = 'module' src="./scripts/validate.js"></script>
+    <script type='module' src="./scripts/popupFormCard.js"></script>
 
 </body>
 
