--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <script  type = 'module' src="./scripts/initialCards.js"></script>
     <script  type = 'module' src="./scripts/index.js"></script>
     <script  type = 'module' src="./scripts/Card.js"></script>
-    <script  type = 'module' src="./scripts/validate.js"></script>
+    <!--<script  type = 'module' src="./scripts/validate.js"></script>-->
     <script type='module' src="./scripts/popupFormCard.js"></script>
 
 </body>
