--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
     <script  type = 'module' src="./scripts/Card.js"></script>
     <!--<script  type = 'module' src="./scripts/validate.js"></script>-->
     <script type='module' src="./scripts/popupFormCard.js"></script>
+    <script type='module' src="./scripts/FormValidator.js"></script>
 
 </body>
 
