--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                     <button class="popup__close" type="button"></button>
                     <h2 class="popup__title">Редактировать профиль</h2>
                     <form name = 'profileForm' class="popup__form"  novalidate>
-                        <input type="text"  id = "name__input" name="name" minlength="2" maxlength="40" class="popup__input popup__input_type_name" placeholder="Имя" required>
-                        <span class="popup__input-error" id="name__input-error"></span>
-                        <input type="text" name="description" id="job-input" minlength="2" maxlength="200" class="popup__input popup__input_type_job" placeholder="О себе" required>
-                        <span class="popup__input-error" id="job-input-error"></span>
+                        <input type="text"  id = "name" name="name" minlength="2" maxlength="40" class="popup__input popup__input_type_name" placeholder="Имя" required>
+                        <span class="popup__input-error" id="errorName"></span>
+                        <input type="text" name="description" id="description" minlength="2" maxlength="200" class="popup__input popup__input_type_job" placeholder="О себе" required>
+                        <span class="popup__input-error" id="errorDescription"></span>
                         <button class="button popup__button" type="submit">Сохранить</button>
                     </form>
                 </div>
@@ -63,11 +63,11 @@
                     <button class="popup__close" type="button"></button>
                     <h2 class="popup__title">Новое место</h2>
                     <form name = 'cardForm' class="popup__form popup__form_add-form"  novalidate>
-                        <input type="text" name="nameCard" id="nameCard" class="popup__input popup__input_type_name popup__input_type_edite-card-name" minlength="2" maxlength="30" placeholder="Название" required>
-                        <span class="popup__input-error" id="nameCard-error"></span>
-                        <input type="url" name="url" id="url" class="popup__input popup__input_type_job popup__input_type_edite-card-link"
+                        <input type="text" name="nameCard" id="name" class="popup__input popup__input_type_name popup__input_type_edite-card-name" minlength="2" maxlength="30" placeholder="Название" required>
+                        <span class="popup__input-error" id="errorName"></span>
+                        <input type="url" name="url" id="description" class="popup__input popup__input_type_job popup__input_type_edite-card-link"
                             placeholder="Ссылка на картинку" required>
-                            <span class="popup__input-error" id="url-error"></span>
+                            <span class="popup__input-error" id="errorDescription"></span>
                         <button class="button popup__button" type="submit">Создать</button>
                     </form>
                 </div>
@@ -97,9 +97,8 @@
     <script  type = 'module' src="./scripts/initialCards.js"></script>
     <script  type = 'module' src="./scripts/index.js"></script>
     <script  type = 'module' src="./scripts/Card.js"></script>
-    <!--<script  type = 'module' src="./scripts/validate.js"></script>-->
     <script type='module' src="./scripts/popupFormCard.js"></script>
-    <script type='module' src="./scripts/FormValidator.js"></script>
+    
 
 </body>
 
