--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                 <div class="popup__content">
                     <button class="popup__close" type="button"></button>
                     <h2 class="popup__title">Редактировать профиль</h2>
-                    <form name = 'profileForm' class="popup__form"  novalidate>
+                    <form name = 'profileForm' class="popup__form popup__form_profile"  novalidate>
                         <input type="text"  id = "name" name="name" minlength="2" maxlength="40" class="popup__input popup__input_type_name" placeholder="Имя" required>
-                        <span class="popup__input-error" id="errorName"></span>
+                        <span class="popup__input-error popup__input-error-name" name="errorName"></span>
                         <input type="text" name="description" id="description" minlength="2" maxlength="200" class="popup__input popup__input_type_job" placeholder="О себе" required>
-                        <span class="popup__input-error" id="errorDescription"></span>
+                        <span class="popup__input-error popup__input-error-description" name="errorDescription"></span>
                         <button class="button popup__button" type="submit">Сохранить</button>
                     </form>
                 </div>
@@ -63,11 +63,11 @@
                     <button class="popup__close" type="button"></button>
                     <h2 class="popup__title">Новое место</h2>
                     <form name = 'cardForm' class="popup__form popup__form_add-form"  novalidate>
-                        <input type="text" name="nameCard" id="name" class="popup__input popup__input_type_name popup__input_type_edite-card-name" minlength="2" maxlength="30" placeholder="Название" required>
-                        <span class="popup__input-error" id="errorName"></span>
-                        <input type="url" name="url" id="description" class="popup__input popup__input_type_job popup__input_type_edite-card-link"
+                        <input type="text" name="name" id="" class="popup__input popup__input_type_name popup__input_type_edite-card-name" minlength="2" maxlength="30" placeholder="Название" required>
+                        <span class="popup__input-error popup__input-error-name" name="errorName"></span>
+                        <input type="url" name="description" id="descriptionCard" class="popup__input popup__input_type_job popup__input_type_edite-card-link"
                             placeholder="Ссылка на картинку" required>
-                            <span class="popup__input-error" id="errorDescription"></span>
+                            <span class="popup__input-error popup__input-error-description" name="errorDescription"></span>
                         <button class="button popup__button" type="submit">Создать</button>
                     </form>
                 </div>
