--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         
 
     </div>
-    <script  type = 'module' src="./scripts/initialCards.js"></script>
+    <script  type = 'module' src="./scripts/utils/initialCards.js"></script>
     <script  type = 'module' src="./scripts/index.js"></script>
     <script  type = 'module' src="./scripts/Card.js"></script>
     <script type='module' src="./scripts/popupFormCard.js"></script>
