--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,9 @@
             <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="Аватар">
             <div class="profile__section">
                 <div class="profile__date">
-                    <h1 class="profile__name">Жак-Ив Кусто</h1>
+                    <h1 class="profile__name"></h1>
                     <button type="button" class="button profile__button"></button>
-                    <p class="profile__job">Исследователь океана</p>
+                    <p class="profile__job"></p>
                 </div>
                 <button type="button" class="button profile__edit-button"></button>
             </div>
@@ -33,7 +33,11 @@
                     <img src="<%=require('./images/kirill-pershin-1088404-unsplash.jpg')%>" class="place-card__image" alt="фото">
                     <div class="place-card__description">
                         <h2 class="place-card__title">Карачаево-Черкессия</h2>
-                        <button class="place-card__like-img" type="button"></button>
+                        <div class="place-card__like-section">
+                            <button class="place-card__like-img" type="button"></button>
+                            <span class="place-card__like-info">1</span>
+                        </div>
+                        
                     </div>
                 </div>
             </template>
@@ -64,10 +68,20 @@
                     <form name = 'cardForm' class="popup__form popup__form_add-form"  novalidate>
                         <input type="text" name="name" id="nameCard" class="popup__input popup__input_type_name popup__input_type_edite-card-name" minlength="2" maxlength="30" placeholder="Название" required>
                         <span class="popup__input-error popup__input-error-name" name="errorName" id="nameCard-error" ></span>
-                        <input type="url" name="description" id="descriptionCard" class="popup__input popup__input_type_job popup__input_type_edite-card-link"
+                        <input type="url" name="link" id="descriptionCard" class="popup__input popup__input_type_job popup__input_type_edite-card-link"
                             placeholder="Ссылка на картинку" required>
                             <span class="popup__input-error popup__input-error-description" name="errorDescription" id="descriptionCard-error" ></span>
                         <button class="button popup__button" type="submit">Создать</button>
+                    </form>
+                </div>
+            </div>
+
+
+            <div class="popup popup_type_delete-card">
+                <div class="popup__content">
+                    <button class="popup__close" type="button"></button>
+                    <h2 class="popup__title">Вы уверены?</h2>
+                        <button class="button popup__button" type="submit">Да</button>
                     </form>
                 </div>
             </div>
