--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,12 @@
 
         <main class="content">
         <section class="section profile">
-            <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="Аватар">
+            <div class="profile__avatar-block">
+                <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="Аватар">
+                <div class="profile__avatar-button"></div>
+            </div>
+            
+            
             <div class="profile__section">
                 <div class="profile__date">
                     <h1 class="profile__name"></h1>
@@ -77,7 +82,7 @@
             </div>
 
 
-            <div class="popup popup_type_delete-card popup_open">
+            <div class="popup popup_type_delete-card">
                 <div class="popup__content">
                     <button class="popup__close" type="button"></button>
                     <h2 class="popup__title">Вы уверены?</h2>
@@ -87,7 +92,7 @@
             </div>
 
 
-            <div class="popup popup_type_update-avatar popup_open">
+            <div class="popup popup_type_update-avatar">
                 <div class="popup__content">
                     <button class="popup__close" type="button"></button>
                     <h2 class="popup__title">Обновить аватар</h2>
