--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,6 @@
                     <button class="popup__close" type="button"></button>
                     <h2 class="popup__title">Вы уверены?</h2>
                         <button class="button popup__button" type="submit">Да</button>
-                    </form>
                 </div>
             </div>
 
@@ -97,11 +96,11 @@
                     <button class="popup__close" type="button"></button>
                     <h2 class="popup__title">Обновить аватар</h2>
                     <form name='cardForm' class="popup__form popup__form_add-form" novalidate>
-                        <input type="url" name="link" id="descriptionCard"
+                        <input type="url" name="link" id="descriptionAvatar"
                             class="popup__input popup__input_type_job popup__input_type_edite-card-link"
                             placeholder="Ссылка на картинку" required>
                         <span class="popup__input-error popup__input-error-description" name="errorDescription"
-                            id="descriptionCard-error"></span>
+                            id="descriptionAvatar-error"></span>
                         <button class="button popup__button" type="submit">Сохранить</button>
                     </form>
                 </div>
