--- a/src/index.html
+++ b/src/index.html
@@ -95,13 +95,13 @@
                 <div class="popup__content">
                     <button class="popup__close" type="button"></button>
                     <h2 class="popup__title">Обновить аватар</h2>
-                    <form name='cardForm' class="popup__form popup__form_add-form" novalidate>
+                    <form name='cardForm' class="popup__form popup__form_avatar" novalidate>
                         <input type="url" name="link" id="descriptionAvatar"
                             class="popup__input popup__input_type_job popup__input_type_edite-card-link"
                             placeholder="Ссылка на картинку" required>
                         <span class="popup__input-error popup__input-error-description" name="errorDescription"
                             id="descriptionAvatar-error"></span>
-                        <button class="button popup__button" type="submit">Сохранить</button>
+                        <button class="button popup__button popup__button_disabled" type="submit">Сохранить</button>
                     </form>
                 </div>
             </div>
